// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not save a new view within a week since the last view 1`] = `
View {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": 2020-06-11T01:17:00.000Z,
  "userId": "u1",
}
`;

exports[`should save a new view after a week since the last view 1`] = `
View {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": 2020-06-19T01:17:00.000Z,
  "userId": "u1",
}
`;

exports[`should save a new view with the provided timestamp 1`] = `
View {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": 2020-06-11T01:17:00.000Z,
  "userId": "u1",
}
`;

exports[`should save a new view without timestamp 1`] = `
Object {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": Any<Date>,
  "userId": "u1",
}
`;
